# sit-l

./: .env  .gitignore  README.md  pyproject.toml
convincesitl_mllm/: learning.py
convincesitl_mllm/prompts/: description_prompt.py  prompt_mapping.py  prompts_UC1.py  prompts_UC2.py  prompts_UC3.py  sys_prompts_UC1.py  sys_prompts_UC2.py  sys_prompts_UC3.py
docs/source/: conf.py  execution.rst  generic-principles.rst  index.rst
prompts/: prompt_mapping.py
